# adventofcode2024

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/days/: day01.rs  day02.rs  day03.rs  day04.rs
