[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
itertools = "0.10.5"
regex = "1.7.0"
log = "0.4.0"
env_logger = "0.9.0"
grid = "0.9.0"
radix = "0.6.0"
pathfinding = "4.0.0"
parse-display = "0.8.0"
rotate-enum = "0.1.2"
indicatif = "0.17.2"